<resources>
    <string name="app_name">Guess the show</string>

    <!--    User menu-->
    <string name="login">Login/Signup</string>
    <string name="logout">Logout</string>
    <string name="logoutMessage">Logged out successfully</string>
    <string name="highscores">Leader board</string>

    <!--    Main activity-->
    <string name="welcomeText">Welcome to <i>Guess the show</i>, see how well you know the things you love to watch </string>
    <string name="movieHomeText">Play in movie category</string>
    <string name="seriesHomeText">Play in TV series category</string>
    <string name="animeHomeText">Play in anime category</string>

    <!--    Choices activity-->
    <string name="choice_1">Guess the names of popular shows on your screens \n 📺</string>
    <string name="choice_2">Guess the names of your favourite characters \n 🎭</string>
    <string name="locked">Finish at least 3 rounds in shows mode with at least 10 correctly answered questions to unlock characters mode</string>
    <string name="unlocked">Congratulations🎉🎉, you have unlocked characters mode </string>

    <!--    Quiz activity-->
    <string name="imageDescription">quiz image</string>
    <string name="dialogButton">Continue</string>

    <string name="progressTitle">Current progress</string>
    <string name="progressMessage">Congratulations, you just finished a round. These are your progress details so far \n
        -Rounds completed: %d \n
        -Questions taken: %d \n
        -Correct answers: %d </string>

    <string name="endMessage">Congratulations, you are in the last round. These are your progress details so far \n
        -Rounds completed: %d \n
        -Questions taken: %d \n
        -Correct answers: %d </string>

    <string name="fetchingDataTitle">Fetching data</string>
    <string name="fetchingDataMessage">Quiz data is being fetched \n
        -To play the game select an answer to get a score before the time runs out, time period is forty seconds \n \n
        -If the correct answer is selected, the answer box turns green and if the wrong answer is selected, the answer box turns red \n \n
        -Questions would be grouped in rounds, total number of rounds is usually 10 and each round usually contains ten questions</string>

    <!--    Results activity-->
    <string name="resultsTitle">Congratulations🎉🎉, you have reached the end of all quiz rounds. See your results details below</string>
    <string name="resultsRounds">Total rounds taken: %d</string>
    <string name="resultsQuestions">Total questions taken: %d</string>
    <string name="resultsCorrect">Total correct questions answered</string>
    <string name="resultsCorrectNumber">%d</string>
    <string name="cloudDBSuccess">Score successfully added to leader board</string>

<!--    Login activity-->
    <string name="loginEmail">email</string>
    <string name="loginPassword">password</string>
    <string name="emtpyDetails">Kindly put in your email and password details</string>
    <string name="success">successful authentication</string>
    <string name="failure">failed authentication</string>
    <string name="passwordDetail">password must be minimum of 6 characters</string>

<!--    Highscores activity-->
    <string name="highscoresTitle">Showing global leader board</string>


</resources>