<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/moviesCard"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="51dp"
        android:onClick="showChoices"
        android:tag="movies"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <TextView
            android:id="@+id/moviesHomeText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/movieHomeText"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/seriesCard"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="20dp"
        android:onClick="showChoices"
        android:tag="series"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <TextView
            android:id="@+id/seriesHomeText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/seriesHomeText"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/animeCard"
        android:layout_width="380dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:onClick="showChoices"
        android:tag="anime"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviesCard">

        <TextView
            android:id="@+id/animeHomeText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/animeHomeText"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="@string/welcomeText"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>